--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap">
+
 </head>
 <body>
     <section class="principal container">
@@ -14,10 +17,66 @@
                 Conteúdo exclusivo sobre desenvolvimento de software e tudo que precisamos para dominar linguagens de programação.
             </h1>
             <img src="img/Combo.png" alt="imagem-principal-combo" class="container_imagem">
-            <a href="www.balta.io" class="container_botao">Assine por 12x de R$ 120,00*</a>
+            <a href="https://www.balta.io" class="container_botao">Assine por 12x de R$ 120,00*</a>
             <a href="www.balta.io" class="container_botao botao_secundario">Assine com desconto para estudante</a>
-            <p>* O preço pode variar caso a assinatura seja feita em outros planos.</p>
+            <p class="container_aviso">* O preço pode variar caso a assinatura seja feita em outros planos.</p>
         </div>
     </section>
+
+    <section class="container secundario">
+        <img src="img/Combo.png" alt="imagem-segunda-section" class="imagem-segunda-section">
+        <div class="container_descricao">
+            <h2 class="descricao_titulo">Assista do seu jeito</h2>
+            <p class="descricao_texto">
+                Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. 
+                Nossa seleção de cursos não para de crescer
+            </p>
+        </div>
+    </section>
+
+    <section class="dispositivos">
+        <h2 class="dispositivo_titulo">Disponível nos seus dispositivos favoritos</h2>
+        <ul class="dispositivos_listas">
+            <li>
+                <img src="img/tv.png" alt="imagem-tv">
+                <h3>TV</h3>
+            </li>
+            <li>
+                <img src="img/computador.png" alt="imagem-computador">
+                <h3>Computador</h3>
+            </li>
+            <li>
+                <img src="img/celular.png" alt="imagem-celular">
+                <h3>Celular</h3>
+            </li>
+        </ul>
+    </section>
+
+    <footer class="rodape">
+        <ul class="lista_rodape">
+            <li class="lista_link">
+                <a href="#">Idioma</a>
+            </li>
+            <li class="lista_link">
+                <a href="#">Dispositicos compatíveis</a>
+            </li>
+            <li class="lista_link">
+                <a href="#">Contrato de assinatura</a>
+            </li>
+            <li class="lista_link">
+                <a href="#">Política de privacidade</a>
+            </li>
+            <li class="lista_link">
+                <a href="#">Proteção de dados no Brasil</a>
+            </li>
+            <li class="lista_link">
+                <a href="#">Anúncios personalizados</a>
+            </li>
+            <li class="lista_link">
+                <a href="#">Ajuda</a>
+            </li>
+        </ul>
+        <p>® 2025</p>
+    </footer>
 </body>
 </html>
